[#2] Create mock endpoint for "/files" (#8)
* Add dummy files endpoint

This adds a dummy files endpoint returning just an example response and
not taking any params.

* Generate API documentation

This is simply to greenify the build :v:

* Change filename for README

Just uppercasing the filename for the readme file - makes it easier to
find...

* Get rid of unnecessary prefix usage
